Order에서 OrderTable로의 의존성 제거